--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
     
         <div id="guess_section" class="col-lg-4">
         <div id="emoji_result">
-        
-            <p class="lead">Prediction 1</p>
+            <p id="gesture_result_1" class="lead">Prediction 1</p>
             <br>
             <span id="emoji_1"></span>
             <br>
-            <p class="lead">Prediction 1</p>
+            <p id="gesture_result_2" class="lead">Prediction 2</p>
             <br>
             <span id="emoji_2"></span> 
+            <br>
         </div>
-        <br>
+        <div class="transparent-text"><p class="transparent-separator">Thank you so much for coming here! :]</p></div>
         </div>
 
         <div id="snap_section" class="col-lg-4">
@@ -82,6 +82,7 @@
         <br><br>
         </div>
     </center>
+    <footer>Developed by Mahdiya Alam</footer>
 </body>
 <script src="main.js"></script>
 </html>
